[workspace]
members = ["broker", "observer"]

[workspace.package]
name = "imp"
version = "0.1.0"
edition = "2021"
description = "Imp is a multi-threaded version of some what a Kafka"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
uuid = { version = "1.3.3", features = ["v4"] }
clap = { version = "4.3.8", features = ["cargo"] }
