[workspace]
members = ["nyx-storage", "nyx-network"]

[workspace.package]
name = "nyx"
version = "0.1.0"
edition = "2021"
description = "Streaming data platform of the 21st century"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
nanoid = "0.4.0"
clap = { version = "4.3.8", features = ["cargo"] }
async-std = { version = "1.12.0", features = ["attributes"] }
bincode = "1.3.3"
