[package]
name = "broker"
version.workspace = true
edition.workspace = true
description = "core component of the message queue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_structures = { path = "../shared_structures" }

uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
