[package]
name = "observer"
version.workspace = true
edition.workspace = true
description = "cluster orchestrator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_structures = { path = "../shared_structures" }

clap.workspace = true
uuid.workspace = true
bincode.workspace = true
serde.workspace = true
